# GGEMSim

./: CMakeLists.txt  LICENSE  README.md
data/: 2DGGEM_5_2_5-1V.root  2DGGEMboundary_13_2_13+1V.root  2DGGEMboundary_5_2_5+1V.root  2DGGemE-field.csv  DGGEM_5_2_5.gdml  GGEMgeometry.gdml  MGEMgeometry15mm.gdml
include/: electrode.hh  fields.hh  geomodel.hh  pmodel.hh  thread_pool.hpp  transport.hh
src/: charge_scan.cpp  electrode.cpp  fields.cpp  gain_scan.cpp  geomodel.cpp  multi_scan.cpp  pmodel.cpp  signal_calculator.cpp  signal_scan.cpp  single_charge.cpp  single_charge3D.cpp  transport.cpp
utils/: checkNtuple.C  doubleggem.cpp  ggem08mm.cpp  mgem15mm.cpp  rootconverter2D.py  rootconverter3D.py  testCS.cpp
